# chessalyzer.js

./: .babelrc  .editorconfig  .eslintrc  .eslintrc.cjs  .gitattributes  .gitignore  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.txt  bun.lockb  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  typedoc.json  webpack.config.js
.zed/: settings.json
docs/: ChessBoard.html  ChessPiece.html  ChessTile.html  Chessalyzer.html  GameProcessor.html  classes.list.html  global.html  index.html  module.exports.html  modules.html  quicksearch.html
dts/: exampleHeatmapConfig.d.ts  index.d.ts
lib/: Processor.worker.js  chessalyzer.d.ts  chessalyzer.js  chessalyzer.js.map  chessalyzer.min.js  chessalyzer.min.js.map  worker.js  worker.js.map  worker.min.js  worker.min.js.map
manual-tests/: CustomGameTracker.js  bench.js  testHeatmap.js  test_debug.js  test_release.js  test_release_singlethreaded.js
manualTests/: CustomGameTracker.js  bench.js  bitboardTest.js  testHeatmap.js  test_debug.js  test_debug.ts  test_release.js  test_release_singlethreaded.js  wasmTest.js
scripts/: create-bundle.ts
src/: BaseTracker.js  ChessBoard.js  ChessBoard2.js  ChessPiece.js  ChessPiece2.js  ChessTile.js  Chessalyzer.js  GameProcessor.js  GameTracker.js  MoveData.js  PieceTracker.js  TileTracker.js  chessalyzer.ts  exampleHeatmapConfig.js  index.js  index.ts
test/: Chessalyzer.test.js  Chessalyzer.test.ts  CustomTracker.js  GameTrackerBase.test.js  PieceTrackerBase.test.js  test.1.js  (+10 more)
(+151 files in other folders)
