[package]
name = "bitboard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_for = "0.1.5"
wasm-bindgen = "0.2.100"

[lib]
path="src/rust/lib.rs"
crate-type=["cdylib"]

[profile.release]
lto = true
